Fix typo in user processing panel
Thanks to Storm_dragon for reporting this typo.

--- a/mediagoblin/templates/mediagoblin/user_pages/processing_panel.html
+++ b/mediagoblin/templates/mediagoblin/user_pages/processing_panel.html
@@ -40,7 +40,7 @@ Show:
 <a href="{{ request.urlgen('mediagoblin.user_pages.processing_panel',
                            user=request.user.username, state="failed") }}">Failed</a>,
 <a href="{{ request.urlgen('mediagoblin.user_pages.processing_panel',
-                           user=request.user.username, state="processed") }}">Succesful</a>
+                           user=request.user.username, state="processed") }}">Successful</a>
 </p>
     
 {% if entries.count() %}
